fix: fix doc phone view z-index
* fix: fix z-index

* fix: fix td-doc-phone z-index

--- a/packages/components/src/components/td-doc-tabs/style.less
+++ b/packages/components/src/components/td-doc-tabs/style.less
@@ -2,7 +2,7 @@
   --block-base-width: 16px;
   position: absolute;
   top: 228px;
-  z-index: 1100;
+  z-index: 500;
 
   @media screen and (max-width: 960px) {
     --block-base-width: 14px;
